--- a/my_first.ipynb
+++ b/my_first.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +261,14 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# import my data\n",
-    "data=pd.read_csv('capstone_project/data/bulidata.csv')\n",
+    "data=pd.read_csv('data/bulidata.csv')\n",
     "data.tail()"
    ]
   },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "array(['bl1'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,13 +372,385 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Div</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>HomeTeam</th>\n",
+       "      <th>AwayTeam</th>\n",
+       "      <th>FTHG</th>\n",
+       "      <th>FTAG</th>\n",
+       "      <th>FTR</th>\n",
+       "      <th>HTHG</th>\n",
+       "      <th>HTAG</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AvgC&lt;2.5</th>\n",
+       "      <th>AHCh</th>\n",
+       "      <th>B365CAHH</th>\n",
+       "      <th>B365CAHA</th>\n",
+       "      <th>PCAHH</th>\n",
+       "      <th>PCAHA</th>\n",
+       "      <th>MaxCAHH</th>\n",
+       "      <th>MaxCAHA</th>\n",
+       "      <th>AvgCAHH</th>\n",
+       "      <th>AvgCAHA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>15/07/2022</td>\n",
+       "      <td>19:30</td>\n",
+       "      <td>Kaiserslautern</td>\n",
+       "      <td>Hannover</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>2.13</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>2.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>16/07/2022</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>Greuther Furth</td>\n",
+       "      <td>Holstein Kiel</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>1.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>16/07/2022</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>Regensburg</td>\n",
+       "      <td>Darmstadt</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>1.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>16/07/2022</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>Sandhausen</td>\n",
+       "      <td>Bielefeld</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>1.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>16/07/2022</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>St Pauli</td>\n",
+       "      <td>Nurnberg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>H</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.12</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2.12</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>1.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>28/05/2023</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>Magdeburg</td>\n",
+       "      <td>Bielefeld</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>1.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>28/05/2023</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>Paderborn</td>\n",
+       "      <td>Nurnberg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.63</td>\n",
+       "      <td>-0.50</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>28/05/2023</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>Regensburg</td>\n",
+       "      <td>Heidenheim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>2.04</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>2.04</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>28/05/2023</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>Sandhausen</td>\n",
+       "      <td>Hamburg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>1.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>D2</td>\n",
+       "      <td>28/05/2023</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>St Pauli</td>\n",
+       "      <td>Karlsruhe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>1.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>306 rows × 105 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Div        Date   Time        HomeTeam       AwayTeam  FTHG  FTAG FTR  \\\n",
+       "0    D2  15/07/2022  19:30  Kaiserslautern       Hannover     2     1   H   \n",
+       "1    D2  16/07/2022  12:00  Greuther Furth  Holstein Kiel     2     2   D   \n",
+       "2    D2  16/07/2022  12:00      Regensburg      Darmstadt     2     0   H   \n",
+       "3    D2  16/07/2022  12:00      Sandhausen      Bielefeld     2     1   H   \n",
+       "4    D2  16/07/2022  12:00        St Pauli       Nurnberg     3     2   H   \n",
+       "..   ..         ...    ...             ...            ...   ...   ...  ..   \n",
+       "301  D2  28/05/2023  14:30       Magdeburg      Bielefeld     4     0   H   \n",
+       "302  D2  28/05/2023  14:30       Paderborn       Nurnberg     0     1   A   \n",
+       "303  D2  28/05/2023  14:30      Regensburg     Heidenheim     2     3   A   \n",
+       "304  D2  28/05/2023  14:30      Sandhausen        Hamburg     0     1   A   \n",
+       "305  D2  28/05/2023  14:30        St Pauli      Karlsruhe     1     1   D   \n",
+       "\n",
+       "     HTHG  HTAG  ... AvgC<2.5  AHCh  B365CAHH  B365CAHA  PCAHH  PCAHA  \\\n",
+       "0       1     0  ...     1.94  0.00      1.75      2.13   1.77   2.11   \n",
+       "1       0     1  ...     2.08 -0.25      1.85      2.00   1.86   1.99   \n",
+       "2       1     0  ...     2.31  0.25      2.02      1.83   2.05   1.81   \n",
+       "3       1     0  ...     1.85  0.00      1.90      1.95   1.87   1.98   \n",
+       "4       3     0  ...     2.12  0.00      1.95      1.90   1.91   1.94   \n",
+       "..    ...   ...  ...      ...   ...       ...       ...    ...    ...   \n",
+       "301     2     0  ...     3.35  0.50      1.90      1.95   1.92   1.99   \n",
+       "302     0     1  ...     2.63 -0.50      1.90      1.95   1.92   1.99   \n",
+       "303     0     0  ...     2.25  1.00      1.82      2.02   1.87   2.04   \n",
+       "304     0     1  ...     3.28  1.50      2.05      1.80   1.98   1.93   \n",
+       "305     0     1  ...     2.90 -1.00      1.90      1.95   1.94   1.96   \n",
+       "\n",
+       "     MaxCAHH  MaxCAHA  AvgCAHH  AvgCAHA  \n",
+       "0       1.83     2.16     1.79     2.06  \n",
+       "1       1.94     2.07     1.87     1.97  \n",
+       "2       2.10     1.86     2.05     1.79  \n",
+       "3       2.08     1.98     1.98     1.86  \n",
+       "4       1.99     2.12     1.87     1.98  \n",
+       "..       ...      ...      ...      ...  \n",
+       "301     1.95     2.02     1.86     1.95  \n",
+       "302     1.95     2.11     1.82     2.00  \n",
+       "303     2.01     2.04     1.90     1.93  \n",
+       "304     2.17     1.93     2.01     1.82  \n",
+       "305     2.00     1.96     1.91     1.90  \n",
+       "\n",
+       "[306 rows x 105 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2=pd.read_csv('data/D2.csv')\n",
+    "data_2"
    ]
   }
  ],
